crando botones de acceso

--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -10,9 +10,9 @@
     font-size: $fontSizeH5;
     cursor: pointer;
     &:hover{
-        background-color: #7f5af0;
+        color: #a7a9be;
         transition: all 1s;
-        border-color: #7f5af0;
+        background-color: #e53170;
 
     }
 }
