--- a/styles/_function.scss
+++ b/styles/_function.scss
@@ -7,3 +7,7 @@
     justify-content: $justify;
     align-items: center;
 }
+@mixin displayGrid($gridTemplateColumns) {
+    display: grid;
+    grid-template-columns: $gridTemplateColumns;
+}
