--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 /*Font size of a p*/
 header {
   height: 100vh;
-  background-color: #16161a;
+  background-color: #0f0e17;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,21 +22,31 @@ header {
           flex-direction: column;
 }
 
-header .navigation-menu {
+header #enter {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  list-style: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-animation: fadeIn 2s;
+          animation: fadeIn 2s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
 }
 
-header span {
-  color: white;
+header #enter div + span {
   display: block;
+  color: white;
   font-family: monospace;
   white-space: nowrap;
   border-right: 2px solid;
@@ -47,56 +57,34 @@ header span {
 }
 
 header .navigation-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  list-style: none;
 }
 
-/*keyframe that simulates a typewritter*/
-@-webkit-keyframes typing {
-  from {
-    width: 0;
-  }
-}
-@keyframes typing {
-  from {
-    width: 0;
+@media screen and (max-width: 768px) {
+  .navigation-menu {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@-webkit-keyframes blink {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: white;
-  }
-}
-
-@keyframes blink {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: white;
+@media screen and (min-width: 768px) {
+  .navigation-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
 .presentation {
   z-index: 1;
-  /*    background-image: url("https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    background-clip: text;
-    color: transparent;*/
   color: white;
   font-size: 2rem;
   display: -webkit-box;
@@ -115,9 +103,77 @@ header .navigation-menu {
 }
 
 .dedication {
-  -webkit-animation: reveal 4s ease-in-out;
-          animation: reveal 4s ease-in-out;
+  -webkit-animation: reveal 3s ease-in-out;
+          animation: reveal 3s ease-in-out;
   z-index: 0;
+}
+
+/*keyframe that simulates a typewritter*/
+@-webkit-keyframes typing {
+  from {
+    width: 0;
+  }
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@-webkit-keyframes blink {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
+}
+
+@keyframes blink {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes reveal {
@@ -169,10 +225,10 @@ header .navigation-menu {
 }
 
 .buttonLinkNav:hover {
-  background-color: #7f5af0;
+  color: #a7a9be;
   -webkit-transition: all 1s;
   transition: all 1s;
-  border-color: #7f5af0;
+  background-color: #e53170;
 }
 
 body {
